<resources>
    <string name="app_name">SPdfApplication</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="remark_change_tips">批注内容已修改,确认保存吗?</string>
    <string name="tips">提示</string>

    <string name="activity_main_page_tips">页码:</string>
    <string name="activity_main_remark">批注</string>
    <string name="activity_main_text_remark">文字批注</string>

    <string name="activity_file_viewer_button_open_doc">打开 doc</string>
    <string name="activity_file_viewer_button_open_ppt">打开 ppt</string>
    <string name="activity_file_viewer_button_open_excel">打开 excel</string>
    <string name="activity_file_viewer_button_open_ofd">打开 ofd</string>
    <string name="activity_file_viewer_button_open_other">其他文件格式</string>

    <string name="layout_pen_operating_cancel">取消</string>
    <string name="layout_pen_operating_back">撤回</string>
    <string name="layout_pen_operating_ok">保存</string>

    <string name="popupwindow_operating_delete_line">删除线</string>
    <string name="popupwindow_operating_under_line">下划线</string>
    <string name="popupwindow_operating_under_wave_line">波浪线</string>
    <string name="popupwindow_operating_high_light">高亮</string>
    <string name="popupwindow_operating_clear">清屏</string>

    <string name="request_permission">清屏</string>
    <string name="permission_request_rationale">是否允许程序请求文件读取权限</string>
    <string name="permission_request_ok">确定</string>
    <string name="permission_request_cancel">取消</string>
    <string name="permission_request_open_setting_tips">需要文件读取权限以正常使用软件,请在设置中开启</string>

    <string name="layout_search_appbar_default_search_hint">请输入搜索内容</string>
    <string name="layout_search_appbar_search_cancel">取消</string>

    <string name="layout_search_search_button">搜索</string>

    <string name="popupwindow_read_mode_read_title">阅读</string>
    <string name="popupwindow_read_mode_item_single">单页</string>
    <string name="popupwindow_read_mode_item_multi">多页</string>
    <string name="popupwindow_read_mode_item_thumbnail">缩略图</string>
    <string name="popupwindow_read_mode_item_night">夜间模式</string>
    <string name="popupwindow_read_mode_item_auto_fill_white_space">自动填充白边</string>

    <string name="activity_thumbail_title">缩略图</string>

    <string name="view_pdf_text_remark_hint">请添加批注内容</string>


</resources>