<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileViewerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonOpenDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_file_viewer_button_open_doc" />

        <Button
            android:id="@+id/buttonOpenPpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_file_viewer_button_open_ppt" />

        <Button
            android:id="@+id/buttonOpenExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_file_viewer_button_open_excel" />

        <Button
            android:id="@+id/buttonOpenOfd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_file_viewer_button_open_ofd" />
    </LinearLayout>


</FrameLayout>