<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_pen_operating_height"
    android:layout_gravity="bottom"
    android:background="@color/layout_pen_operating_background"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linearLayoutPenColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_normal_margin_narrow"
            android:layout_marginRight="@dimen/view_normal_margin_narrow"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

        </LinearLayout>


    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="@dimen/view_normal_margin_narrow"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_weight="3"
            android:padding="@dimen/view_normal_margin_narrow"
            android:textSize="@dimen/textView_normal_textSize_default"
            android:text="@string/layout_pen_operating_cancel"
            android:textColor="@color/mainColorHelp_default" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_weight="3"
            android:padding="@dimen/view_normal_margin_narrow"
            android:textSize="@dimen/textView_normal_textSize_default"
            android:text="@string/layout_pen_operating_back"
            android:textColor="@color/mainColorHelp_default" />

        <TextView
            android:id="@+id/textViewSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:padding="@dimen/view_normal_margin_narrow"
            android:textSize="@dimen/textView_normal_textSize_default"
            android:text="@string/layout_pen_operating_ok"
            android:textColor="@color/mainColorHelp_default" />

    </LinearLayout>


</LinearLayout>